fix: add missing border radius for profile avatars (#11)

--- a/client/src/components/drawer_item.scss
+++ b/client/src/components/drawer_item.scss
@@ -8,11 +8,6 @@
 
     // Override default margin from the text
     margin-right: 10px;
-}
-
-.quesync-drawer-avatar .rmwc-avatar__icon {
-    height: 34px;
-    width: 34px;
 
     border-radius: 17px;
 }
