--- a/client/src/components/friend_details.scss
+++ b/client/src/components/friend_details.scss
@@ -14,13 +14,8 @@
 }
 
 .quesync-friend-avatar {
-	padding-bottom: 26px;
+	margin-bottom: 26px;
 
-	height: 64px;
-	width: 64px;
-}
-
-.quesync-friend-avatar .rmwc-avatar__icon {
 	height: 64px;
 	width: 64px;
 
