--- a/client/src/components/message_bubble.scss
+++ b/client/src/components/message_bubble.scss
@@ -30,11 +30,6 @@
 .quesync-text-avatar {
 	height: 26px;
 	width: 26px;
-}
-
-.quesync-text-avatar .rmwc-avatar__icon {
-	height: 26px;
-	width: 26px;
 
 	border-radius: 13px;
 }
