--- a/client/src/components/search_field.scss
+++ b/client/src/components/search_field.scss
@@ -39,11 +39,6 @@
 .quesync-search-field-item-avatar {
 	height: 26px;
 	width: 26px;
-}
-
-.quesync-search-field-item-avatar .rmwc-avatar__icon {
-	height: 26px;
-	width: 26px;
 
 	border-radius: 13px;
 }
